<resources>
    <string name="app_name">ВКонтакте Фотки</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="operation_finished">Выбранные фотоальбомы загружены</string>
    <string name="action_albums">Альбомы</string>
    <string name="action_friends">Друзья</string>
    <string name="of_friend">друга</string>
    <string name="of_group">группы</string>
    <string name="action_groups">Группы</string>
    <string name="action_download">Скачать</string>
    <string name="action_select_all">Выделить все</string>
    <string name="my_photos">Мои фото</string>
</resources>
