<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_albums"
        android:title="@string/action_albums"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_friends"
        android:title="@string/action_friends"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/action_groups"
        android:title="@string/action_groups"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:orderInCategory="4"
        android:icon="@drawable/ic_download"
        app:showAsAction="always" />

    <item android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="5"
        app:showAsAction="always" />

</menu>
